# claude-flow-studio

./: .gitattributes  .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  verify.sh  vite.config.ts
.github/workflows/: ci.yml  links.yml
crates/cf-core/: Cargo.toml
crates/cf-core/src/: frontmatter.rs  lib.rs  model.rs  scan.rs  staging.rs
crates/cf-core/tests/: scan_integration.rs
docs/: threat-model.md
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: claude-config-access.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  paths.rs
src-tauri/src/commands/: mod.rs  read.rs  staging.rs
src-tauri/tests/: config_contract.rs  staging_integration.rs
src/lib/: api.ts  cards.ts  editor.ts  render.ts
src/views/: agentes.ts  automatizacion.ts  comandos.ts  historial.ts  memoria.ts  overview.ts  reglas.ts  skills.ts
