[workspace]
members = ["crates/cf-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "MIT"
authors = ["Damian Sire"]

# Lints centralizados: los crates los heredan con `[lints] workspace = true`.
# Institucionalizan lo que el código ya cumple (nada de unwrap/panic/dbg/print
# en dominio) para que no se degrade con el tiempo. -D warnings del CI los eleva
# a error.
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn"
print_stderr = "warn"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
similar = "2"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true
