[package]
name = "cf-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
similar.workspace = true
chrono.workspace = true

[dev-dependencies]
rstest = "0.23"
proptest = "1"
tempfile = "3"
